Fixed 747 page, now all elements aligned properly. minor adjustments 737 page

--- a/B737.css
+++ b/B737.css
@@ -26,7 +26,7 @@ article{
   text-align:center;
   width: 75vw;
   font-family: monospace;
-  margin:55px;
+  margin:50px;
   color:white;
 }
 
@@ -49,6 +49,7 @@ ul{
   border-width:6px;
   border-color:rgb(246,76,114);
   border-radius: 6px 12px 18px 24px;
+  margin-top:50px;
 }
 
 a:hover {
@@ -81,6 +82,8 @@ iframe{
   margin-top:25px;
   margin-right:auto;
   margin-left:auto;
-  
+}
 
+img{
+  margin-top:50px;
 }
