--- a/B747.css
+++ b/B747.css
@@ -28,8 +28,8 @@ article{
   font-size: 35px;
   width:45vw;
   text-decoration:none;
-  margin-left:15vw;
-  margin-top:3vw;
+  margin-left:12vw;
+  margin-top:50px;
 }
 
 a{
@@ -42,6 +42,7 @@ a{
 }
 
 ul{
+  margin-top:50px;
   margin-left:25px;
   width:220px;
   color:white;  
